--- a/src/index.css
+++ b/src/index.css
@@ -75,10 +75,47 @@ h4{
   margin: 0;
 }
 
-form{
+.fbForm{
   display: flex;
   padding: 2rem;
   align-items: center;
   justify-content: center;
   width: 100%;
+}
+.manualForm{
+  display: flex;
+  width: 100%;
+  padding: 2rem;
+}
+
+.formContainer{
+  width: 50%;
+}
+
+.inputContainer{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-bottom: 1rem;
+}
+
+.input{
+  /* margin-bottom: 1rem; */
+  width: 100%;
+  height: 2rem;
+}
+
+.submitManual{
+  border-radius: 8px;
+  border: 1px solid #000;
+  width: fit-content;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: #ffffff;
+  cursor: pointer;
+  transition: border-color 0.25s;
+  /* margin: 1rem; */
+  
 }
