--- a/src/index.css
+++ b/src/index.css
@@ -89,11 +89,17 @@ h4{
 }
 
 .formContainer{
-  width: 50%;
+  border: 1px solid #000;
+  padding: 1rem;
+  width: 80%;
+  display: grid;
+  justify-items: center;
+  grid-template-columns: repeat(2, 1fr);
 }
 
 .inputContainer{
   display: flex;
+  width: 90%;
   flex-direction: column;
   align-items: flex-start;
   margin-bottom: 1rem;
