--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,14 @@
   -webkit-text-size-adjust: 100%;
 }
 
+#root {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 2rem;
+  text-align: center;
+  overflow-x: hidden;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
@@ -30,6 +38,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  flex-direction: column;
 }
 
 h1 {
@@ -41,10 +50,30 @@ textarea{
   width: 70%;
 }
 
+
+
+.event{
+  text-align: left;
+  padding: .5rem;
+  display: flex;
+  justify-content: space-between;
+}
+
+.eventWrapper{
+  display: flex;
+  flex-direction: column;
+  width: 90%;
+  border: 1px solid black;
+  padding: 1rem;
+  margin-bottom: 3rem;
+}
+
 .submit {
   border-radius: 8px;
   border: 1px solid #000;
+  color: #000;
   width: fit-content;
+  height: fit-content;
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
@@ -53,7 +82,7 @@ textarea{
   cursor: pointer;
   transition: border-color 0.25s;
   margin: 1rem;
-  align-self: flex-end;
+  align-self: center;
 }
 button:hover {
   border-color: #646cff;
@@ -115,6 +144,7 @@ h4{
   border-radius: 8px;
   border: 1px solid #000;
   width: fit-content;
+  
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
@@ -124,4 +154,35 @@ h4{
   transition: border-color 0.25s;
   /* margin: 1rem; */
   
+}
+
+@media screen and (max-width: 600px) {
+ body{
+  flex-direction: column;
+ }
+
+ textarea{
+  margin-left: 1rem;
+ }
+
+ #root{
+  padding: 0;
+ }
+
+ .eventWrapper{
+  width: 80%;
+ 
+ }
+
+  .formContainer{
+    grid-template-columns: repeat(1,1fr);
+  }
+
+  .manualForm{
+    flex-direction: column;
+  }
+
+  .submit{
+    align-self: center;
+  }
 }
