--- a/src/index.css
+++ b/src/index.css
@@ -46,13 +46,26 @@ body {
   flex-direction: column;
 }
 
+.pic{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 20vh;
+  width: 70%;
+  background-image: url('./event.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
 }
 
 textarea{
-  width: 70%;
+  width: 100%;
+
 }
 
 
