--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,8 @@
-*{
-  margin: 0;padding: 0;box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-
 
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
@@ -23,7 +24,7 @@
 #root {
   /* max-width: 1280px; */
   margin: 0;
-  padding: 0rem;
+  padding: 5rem;
   text-align: center;
   overflow-x: hidden;
 }
@@ -46,38 +47,26 @@ body {
   flex-direction: column;
 }
 
-.pic{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 20vh;
-  width: 70%;
-  background-image: url('../src/assets/eventz.png');
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
-}
+
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
 }
 
-textarea{
-  width: 100%;
-
+textarea {
+  width: 95%;
+  align-self: center;
 }
 
-
-
-.event{
+.event {
   text-align: left;
-  padding: .5rem;
+  padding: 0.5rem;
   display: flex;
   justify-content: space-between;
 }
 
-.eventWrapper{
+.eventWrapper {
   display: flex;
   flex-direction: column;
   width: 100%;
@@ -110,7 +99,7 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-.close{
+.close {
   height: fit-content;
   width: fit-content;
   border: none;
@@ -118,11 +107,11 @@ button:focus-visible {
   background-color: transparent;
   color: black;
 }
-h4{
+h4 {
   margin: 0;
 }
 
-.fbForm{
+.fbForm {
   display: flex;
   padding: 2rem;
   align-items: center;
@@ -130,22 +119,21 @@ h4{
   width: 100%;
 }
 
-.manualFormWrapper{
+.manualFormWrapper {
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  
 }
-.manualForm{
+.manualForm {
   display: flex;
   width: 100%;
   justify-content: flex-end;
- 
+
   /* padding: 2rem; */
 }
 
-.formContainer{
+.formContainer {
   border: 1px solid #000;
   padding: 1rem;
   width: 80%;
@@ -154,7 +142,7 @@ h4{
   grid-template-columns: repeat(2, 1fr);
 }
 
-.inputContainer{
+.inputContainer {
   display: flex;
   width: 90%;
   flex-direction: column;
@@ -162,17 +150,17 @@ h4{
   margin-bottom: 1rem;
 }
 
-.input{
+.input {
   /* margin-bottom: 1rem; */
   width: 100%;
   height: 2rem;
 }
 
-.submitManual{
+.submitManual {
   border-radius: 8px;
   border: 1px solid #000;
   width: fit-content;
-  
+
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
@@ -181,38 +169,38 @@ h4{
   cursor: pointer;
   transition: border-color 0.25s;
   /* margin: 1rem; */
-  
 }
 
 @media screen and (max-width: 600px) {
- body{
-  flex-direction: column;
- }
+  body {
+    flex-direction: column;
 
- textarea{
-  margin-left: 1rem;
- }
-
- #root{
-  padding: 0;
- }
-
- .eventWrapper{
-  width: 80%;
- 
- }
-
-  .formContainer{
-    grid-template-columns: repeat(1,1fr);
   }
 
-  .manualForm{
+  textarea {
+    margin-left: 1rem;
+  }
+
+  #root {
+    padding: 0;
+  }
+
+  .eventWrapper {
+    width: 95%;
+    font-size: .9rem;
+  }
+
+  .formContainer {
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .manualForm {
     flex-direction: column;
     align-items: center;
     justify-content: center;
   }
 
-  .submit{
+  .submit {
     align-self: center;
   }
 }
